--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@vueuse/core": "^8.0.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-webpack-optimisations": "^2.2.0",
